fix plane